Setup movement of camera

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Levels/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Levels/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Game/Framework/BP_MarsGameModeBase.BP_MarsGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
