Added variation in update speed between 1, 3 and 5 seconds to update player info depending on a key bind.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,6 +87,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="GameSpeed",Scale=1.000000,Key=NumPadOne)
++AxisMappings=(AxisName="GameSpeed",Scale=2.000000,Key=NumPadTwo)
++AxisMappings=(AxisName="GameSpeed",Scale=5.000000,Key=NumPadThree)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
