Large refactor begun

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[CoreRedirects]
++FunctionRedirects=(OldName="GetCurrentMonth",NewName="CalculateCurrentMonth")
++FunctionRedirects=(OldName="CalculateCurrentMonth",NewName="ConvertCurrentMonthToString")
+
