Changed responsibility for holding info about economy to EconomyData class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,4 +90,5 @@ ManualIPAddress=
 [CoreRedirects]
 +FunctionRedirects=(OldName="GetCurrentMonth",NewName="CalculateCurrentMonth")
 +FunctionRedirects=(OldName="CalculateCurrentMonth",NewName="ConvertCurrentMonthToString")
++FunctionRedirects=(OldName="SetMoney",NewName="SetPlayerTreasury")
 
