PM-12: Setup basic production structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,4 +91,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="GetCurrentMonth",NewName="CalculateCurrentMonth")
 +FunctionRedirects=(OldName="CalculateCurrentMonth",NewName="ConvertCurrentMonthToString")
 +FunctionRedirects=(OldName="SetMoney",NewName="SetPlayerTreasury")
++ClassRedirects=(OldName="/Script/ProjectMars.ManufactoringItem",NewName="/Script/ProjectMars.ManufacturingItem")
 
