PM-8: Remove old economy code
* Refactored and removed old economy code.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,4 +92,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="CalculateCurrentMonth",NewName="ConvertCurrentMonthToString")
 +FunctionRedirects=(OldName="SetMoney",NewName="SetPlayerTreasury")
 +ClassRedirects=(OldName="/Script/ProjectMars.ManufactoringItem",NewName="/Script/ProjectMars.ManufacturingItem")
++ClassRedirects=(OldName="/Script/ProjectMars.Nation",NewName="/Script/ProjectMars.State")
 
