PM-15: Rework DelegateManger
* Changed ADelegateManager to UDelegateController.
* The original delegate manager should not be an AActor and
  instead should be a UObject.
* Change from manager to controller as it seems more fitting.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,4 +93,8 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="SetMoney",NewName="SetPlayerTreasury")
 +ClassRedirects=(OldName="/Script/ProjectMars.ManufactoringItem",NewName="/Script/ProjectMars.ManufacturingItem")
 +ClassRedirects=(OldName="/Script/ProjectMars.Nation",NewName="/Script/ProjectMars.State")
++PropertyRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.DelegateManager",NewName="/Script/ProjectMars.MarsGameStateBase.DelegateController")
++PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.DelegateManager",NewName="/Script/ProjectMars.EconomyManager.DelegateController")
++PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.UDelegateManager",NewName="/Script/ProjectMars.EconomyManager.DelegateController")
++PropertyRedirects=(OldName="/Script/ProjectMars.ProjectMarsPlayer.DelegateManager",NewName="/Script/ProjectMars.ProjectMarsPlayer.DelegateController")
 
