--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,7 +94,10 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectMars.ManufactoringItem",NewName="/Script/ProjectMars.ManufacturingItem")
 +ClassRedirects=(OldName="/Script/ProjectMars.Nation",NewName="/Script/ProjectMars.State")
 +PropertyRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.DelegateManager",NewName="/Script/ProjectMars.MarsGameStateBase.DelegateController")
-+PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.DelegateManager",NewName="/Script/ProjectMars.EconomyManager.DelegateController")
-+PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.UDelegateManager",NewName="/Script/ProjectMars.EconomyManager.DelegateController")
++PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.DelegateManager",NewName="/Script/ProjectMars.EconomyController.DelegateController")
++PropertyRedirects=(OldName="/Script/ProjectMars.EconomyManager.UDelegateManager",NewName="/Script/ProjectMars.EconomyController.DelegateController")
 +PropertyRedirects=(OldName="/Script/ProjectMars.ProjectMarsPlayer.DelegateManager",NewName="/Script/ProjectMars.ProjectMarsPlayer.DelegateController")
++ClassRedirects=(OldName="/Script/ProjectMars.EconomyManager",NewName="/Script/ProjectMars.EconomyController")
++PropertyRedirects=(OldName="/Script/ProjectMars.State.EconomyManager",NewName="/Script/ProjectMars.State.EconomyController")
++PropertyRedirects=(OldName="/Script/ProjectMars.ProjectMarsPlayer.EconomyManager",NewName="/Script/ProjectMars.ProjectMarsPlayer.EconomyController")
 
