--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -69,6 +69,12 @@ bUseMouseForTouch=False
 bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
+bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -91,8 +97,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="GameSpeed",Scale=1.000000,Key=NumPadOne)
 +AxisMappings=(AxisName="GameSpeed",Scale=2.000000,Key=NumPadTwo)
 +AxisMappings=(AxisName="GameSpeed",Scale=5.000000,Key=NumPadThree)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
