--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,4 +100,6 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/ProjectMars.EconomyManager",NewName="/Script/ProjectMars.EconomyController")
 +PropertyRedirects=(OldName="/Script/ProjectMars.State.EconomyManager",NewName="/Script/ProjectMars.State.EconomyController")
 +PropertyRedirects=(OldName="/Script/ProjectMars.ProjectMarsPlayer.EconomyManager",NewName="/Script/ProjectMars.ProjectMarsPlayer.EconomyController")
++FunctionRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.SetDelegateManager",NewName="/Script/ProjectMars.MarsGameStateBase.SetDelegateController")
++FunctionRedirects=(OldName="/Script/ProjectMars.EconomyController.InitialiseEvents",NewName="/Script/ProjectMars.EconomyController.SubscribeToDelegateEvents")
 
