PM-21: Refactor Structs
* This feature was originally designed to refactor only methods
  return pointers to TMaps and TArrays and instead make them
  return by const ref. This was implemented.
* I also noticed an issue using Structs where returning them
  by pointer wasn't working when giving them a UPROPERTY macro.
  I have refactored this so that EconomyData is now a UObject
  and not a Struct. My reason for this is that the EconomyData
  object does not need public access, even if it is designed to
  just hold data.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,4 +102,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectMars.ProjectMarsPlayer.EconomyManager",NewName="/Script/ProjectMars.ProjectMarsPlayer.EconomyController")
 +FunctionRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.SetDelegateManager",NewName="/Script/ProjectMars.MarsGameStateBase.SetDelegateController")
 +FunctionRedirects=(OldName="/Script/ProjectMars.EconomyController.InitialiseEvents",NewName="/Script/ProjectMars.EconomyController.SubscribeToDelegateEvents")
++FunctionRedirects=(OldName="/Script/ProjectMars.State.SetupDelegateEvents",NewName="/Script/ProjectMars.State.SubscribeToDelegateEvents")
 
