PM-28: Refactor PlayerController

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -103,4 +103,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.SetDelegateManager",NewName="/Script/ProjectMars.MarsGameStateBase.SetDelegateController")
 +FunctionRedirects=(OldName="/Script/ProjectMars.EconomyController.InitialiseEvents",NewName="/Script/ProjectMars.EconomyController.SubscribeToDelegateEvents")
 +FunctionRedirects=(OldName="/Script/ProjectMars.State.SetupDelegateEvents",NewName="/Script/ProjectMars.State.SubscribeToDelegateEvents")
++FunctionRedirects=(OldName="/Script/ProjectMars.BasePlayerController.RMBPressed",NewName="/Script/ProjectMars.BasePlayerController.OnRMBClick")
 
