--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -104,4 +104,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.EconomyController.InitialiseEvents",NewName="/Script/ProjectMars.EconomyController.SubscribeToDelegateEvents")
 +FunctionRedirects=(OldName="/Script/ProjectMars.State.SetupDelegateEvents",NewName="/Script/ProjectMars.State.SubscribeToDelegateEvents")
 +FunctionRedirects=(OldName="/Script/ProjectMars.BasePlayerController.RMBPressed",NewName="/Script/ProjectMars.BasePlayerController.OnRMBClick")
++FunctionRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.PassActorToSelf",NewName="/Script/ProjectMars.MarsGameStateBase.PassActorToGameState")
 
