PM-32: Implement turn-based system
* The turn-based system is owned and controlled by the TurnController,
  which itself is owned by the game state. The idea is to make
  things such as turn number, season, owner of the current turn etc
  be server authorititive.
* New delegates have been introduced to build out the turn-based
  system.
* The player controller is updated with information about the turn.
  The controller then runs a check to see if it is the owner of the turn
  by comparing the string passed to it by the turn controller against
  it's own nation's tag.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -113,4 +113,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.NationBuilder.GetStates",NewName="/Script/ProjectMars.NationBuilder.GetNations")
 +PropertyRedirects=(OldName="/Script/ProjectMars.NationBuilder.States",NewName="/Script/ProjectMars.NationBuilder.Nations")
 +PropertyRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.States",NewName="/Script/ProjectMars.MarsGameStateBase.Nations")
++FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.StartTurn",NewName="/Script/ProjectMars.TurnController.StartNewTurn")
 
