PM-35: Fix turn number bug

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -114,4 +114,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectMars.NationBuilder.States",NewName="/Script/ProjectMars.NationBuilder.Nations")
 +PropertyRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.States",NewName="/Script/ProjectMars.MarsGameStateBase.Nations")
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.StartTurn",NewName="/Script/ProjectMars.TurnController.StartNewTurn")
++FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.OnFirstTurn",NewName="/Script/ProjectMars.TurnController.BroadcastFirstTurn")
 
