--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -115,4 +115,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectMars.MarsGameStateBase.States",NewName="/Script/ProjectMars.MarsGameStateBase.Nations")
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.StartTurn",NewName="/Script/ProjectMars.TurnController.StartNewTurn")
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.OnFirstTurn",NewName="/Script/ProjectMars.TurnController.BroadcastFirstTurn")
++PropertyRedirects=(OldName="/Script/ProjectMars.SeasonController.Seasons",NewName="/Script/ProjectMars.SeasonController.ListOfSeasons")
 
