PM-36: Show season in dev panel

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,4 +116,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.StartTurn",NewName="/Script/ProjectMars.TurnController.StartNewTurn")
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.OnFirstTurn",NewName="/Script/ProjectMars.TurnController.BroadcastFirstTurn")
 +PropertyRedirects=(OldName="/Script/ProjectMars.SeasonController.Seasons",NewName="/Script/ProjectMars.SeasonController.ListOfSeasons")
++FunctionRedirects=(OldName="/Script/ProjectMars.SeasonController.CalculateCurrentSeason",NewName="/Script/ProjectMars.SeasonController.BroadcastNewSeasonEvent")
 
