PM-45: Build initial pop system structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -117,4 +117,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.TurnController.OnFirstTurn",NewName="/Script/ProjectMars.TurnController.BroadcastFirstTurn")
 +PropertyRedirects=(OldName="/Script/ProjectMars.SeasonController.Seasons",NewName="/Script/ProjectMars.SeasonController.ListOfSeasons")
 +FunctionRedirects=(OldName="/Script/ProjectMars.SeasonController.CalculateCurrentSeason",NewName="/Script/ProjectMars.SeasonController.BroadcastNewSeasonEvent")
++PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.StartingPopNum",NewName="/Script/ProjectMars.PopulationController.StartingCitizenPopNum")
++PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.PopulationNum",NewName="/Script/ProjectMars.PopulationController.CurrentCitizenPopNum")
 
