PM-48: Build tax system structure
* Major refactor involved to clean up code.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/DefaultMap.DefaultMap
-EditorStartupMap=/Game/Levels/DefaultMap.DefaultMap
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Framework/BP_MarsGameModeBase.BP_MarsGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
