PM-49: Setup main menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -120,3 +120,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.StartingPopNum",NewName="/Script/ProjectMars.PopulationController.StartingCitizenPopNum")
 +PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.PopulationNum",NewName="/Script/ProjectMars.PopulationController.CurrentCitizenPopNum")
 
+[/Script/LevelSequence.LevelSequenceProjectSettings]
+LevelSequence.DefaultDisplayRate=60fps
+
