PM-52: Build out basic main menu ui

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -119,6 +119,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/ProjectMars.SeasonController.CalculateCurrentSeason",NewName="/Script/ProjectMars.SeasonController.BroadcastNewSeasonEvent")
 +PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.StartingPopNum",NewName="/Script/ProjectMars.PopulationController.StartingCitizenPopNum")
 +PropertyRedirects=(OldName="/Script/ProjectMars.PopulationController.PopulationNum",NewName="/Script/ProjectMars.PopulationController.CurrentCitizenPopNum")
++FunctionRedirects=(OldName="/Script/ProjectMars.BaseHUD.DrawChooseFactionPage",NewName="/Script/ProjectMars.BaseHUD.DrawFactionInfo")
 
 [/Script/LevelSequence.LevelSequenceProjectSettings]
 LevelSequence.DefaultDisplayRate=60fps
