--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/DefaultMap.DefaultMap
 GlobalDefaultGameMode=/Game/Framework/BP_MarsGameModeBase.BP_MarsGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
